src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_reference_tree_leaf.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_ref_tree(\"gravity_mars.on\", \"c\")"
---
reference tree for `c`
fixtures/gravity_mars.on c = 14.88 :m/s^2
                           = h * 2
