src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__basic_failing_test.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"basic/failing_test.on\")"
---
Model: fixtures/basic/failing_test.on
Tests: 0/1
  test 1: FAIL
Parameters:
  m = 5 :kg
  a = 9.81 :m/s^2
  f = 49.05 :N
  t = 100 :N
