src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__basic_model.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"basic/basic.on\")"
---
Model: fixtures/basic/basic.on
Tests: 1/1
  test 1: PASS
Parameters:
  m = 10 :kg
  a = 9.81 :m/s^2
  f = 98.1 :N
  t = 90 :N
