src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__basic_syntax_error.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"basic/syntax_error.on\")"
---
error: expected parameter or test
  at fixtures/basic/syntax_error.on:3:18
---

Model: fixtures/basic/syntax_error.on
Tests: 0/0
Parameters:
  m = 10 :kg
