src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_applies_design_model_level.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_applies_design/parent.on\")"
---
Model: fixtures/design_applies_design/parent.on
Tests: 0/0
Parameters:
  y = 16
