src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__design_deep_apply_additions.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"deep_apply_additions/parent.on\")"
---
Model: fixtures/deep_apply_additions/parent.on
Tests: 0/0
Parameters:
  y = 16
